{
    "name": "DanielTestingKeys",
    "maps": [
        {
            "name": "TestKeys",
            "id": "3679c2b6-f7cf-4563-82d5-5d7d46df1087",
            "actions": [
                {
                    "name": "TestKey1",
                    "type": "Button",
                    "id": "86176d18-483e-4faa-8b0a-803ca58490bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestKey2",
                    "type": "Button",
                    "id": "129a0404-3a21-4c9a-a262-b4d19df3d8d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestKey3",
                    "type": "Button",
                    "id": "e58c6392-2396-4ec1-b517-57451922868b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdb62a16-c235-4c0f-94dc-7452453d6864",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestKey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3579b4a1-48e8-4ef1-9b90-300d08246544",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestKey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c8c4978-ed6d-44a9-ba02-2431f636ca00",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestKey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}